java 21 and virtual threads for benchmark